--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
             When we felt a Ruckus bass
 
         </p>
+        
+        <p>We are the Junglist Soldiers
+We're marching into the dance hall
+Here we come, here we come
+
+Up and down, the police are pacing
+No one, no one can break free
+Flight would mean just another arrest facing
+Guns and barbed wire greet our view
+        </p>
     </div>
 </body>
 
