add third part of the song

--- a/index.html
+++ b/index.html
@@ -21,16 +21,24 @@
             When we felt a Ruckus bass
 
         </p>
-        
-        <p>We are the Junglist Soldiers
-We're marching into the dance hall
-Here we come, here we come
 
-Up and down, the police are pacing
-No one, no one can break free
-Flight would mean just another arrest facing
-Guns and barbed wire greet our view
+        <p>We are the Junglist Soldiers
+            We're marching into the dance hall
+            Here we come, here we come
+
+            Up and down, the police are pacing
+            No one, no one can break free
+            Flight would mean just another arrest facing
+            Guns and barbed wire greet our view
         </p>
+        <p>We are the Junglist Soldiers
+            We're marching into the dance hall
+            Here we come, here we come
+
+            But for us there is no complaining
+            Winter will in time be passed
+            Then once more we will stand rejoicing
+            Homeland dear you are ours at last</p>
     </div>
 </body>
 
