add paragraph and class line 41

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             Winter will in time be passed
             Then once more we will stand rejoicing
             Homeland dear you are ours at last</p>
+        <p class="dev1">Paragraph dev1</p>
     </div>
 </body>
 
