add p and class in 41 line html

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <p>We are the Junglist Soldiers
             We're marching into the dance hall
             Here we come, here we come
-
             But for us there is no complaining
             Winter will in time be passed
             Then once more we will stand rejoicing
             Homeland dear you are ours at last</p>
+        <p class="dev2">Paragraph dev2</p>
     </div>
 </body>
 
